[gd_scene load_steps=19 format=3 uid="uid://xxlqhdn1pgim"]

[ext_resource type="PackedScene" uid="uid://dj4u2qb6odmb3" path="res://scenes/entities/emeies/enemy.tscn" id="1_i4ro8"]
[ext_resource type="Script" path="res://scenes/entities/emeies/boss.gd" id="2_khj8a"]
[ext_resource type="PackedScene" uid="uid://bt4il726k8d8x" path="res://graphics/characters/nagonford/Nagonford_Animated.glb" id="2_ouvrk"]
[ext_resource type="Material" uid="uid://djwkjr4u5ijh5" path="res://scenes/entities/vfx/nagonshade.tres" id="4_fqfbq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_aix3o"]
radius = 1.45389
height = 7.96724

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mfxrk"]
animation = &"2H_Melee_Attack_Spinning"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jh2ke"]
animation = &"1H_Melee_Attack_Slice_Horizontal"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_ehmgt"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jt7eh"]
animation = &"2H_Melee_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bjibp"]
animation = &"Walking_A"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ejjov"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_khj38"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gnxct"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_kriy4"]
states/idle/node = SubResource("AnimationNodeAnimation_jt7eh")
states/idle/position = Vector2(440.5, 87.5)
states/walk/node = SubResource("AnimationNodeAnimation_bjibp")
states/walk/position = Vector2(570.5, 78.5)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_ejjov"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_khj38"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_gnxct")]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_nlnq8"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_3xqef"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_aeu4q"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_mfxrk")
nodes/Animation/position = Vector2(510, 330)
nodes/AttackAnimation/node = SubResource("AnimationNodeAnimation_jh2ke")
nodes/AttackAnimation/position = Vector2(-20, 200)
nodes/AttackOneShot/node = SubResource("AnimationNodeOneShot_ehmgt")
nodes/AttackOneShot/position = Vector2(570, 60)
nodes/MoveStateMachine/node = SubResource("AnimationNodeStateMachine_kriy4")
nodes/MoveStateMachine/position = Vector2(70, 30)
nodes/SpinBlend/node = SubResource("AnimationNodeBlend2_nlnq8")
nodes/SpinBlend/position = Vector2(770, 30)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_3xqef")
nodes/TimeScale/position = Vector2(940, 190)
nodes/output/position = Vector2(1200, 160)
node_connections = [&"AttackOneShot", 0, &"MoveStateMachine", &"AttackOneShot", 1, &"AttackAnimation", &"SpinBlend", 0, &"AttackOneShot", &"SpinBlend", 1, &"Animation", &"TimeScale", 0, &"SpinBlend", &"output", 0, &"TimeScale"]

[sub_resource type="SphereShape3D" id="SphereShape3D_bxpkn"]
radius = 2.97355

[node name="boss" instance=ExtResource("1_i4ro8")]
script = ExtResource("2_khj8a")
spin_speed = 6

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0100956, 3.99868, 0)
shape = SubResource("CapsuleShape3D_aix3o")

[node name="skin" parent="." index="1" instance=ExtResource("2_ouvrk")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -1.12, 1.42, 0)

[node name="Skeleton3D" parent="skin/Rig" index="0"]
bones/1/position = Vector3(0.00841076, 0.368329, 1.21849e-10)
bones/2/rotation = Quaternion(-0.0605995, -0.130282, -0.00797808, 0.989591)
bones/3/rotation = Quaternion(0.0186532, 0.000609839, -0.00496075, 0.999814)
bones/4/position = Vector3(0.248044, 0.110857, 0.0825816)
bones/4/rotation = Quaternion(-0.585443, -0.246203, -0.722537, 0.273096)
bones/4/scale = Vector3(0.999999, 0.999999, 1)
bones/5/rotation = Quaternion(3.37688e-08, -8.65865e-09, -0.587151, 0.809478)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(5.11846e-11, -3.07743e-10, 0.0266581, 0.999645)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.167324, -0.689841, -0.0524286, 0.702405)
bones/8/position = Vector3(5.13846e-10, 0.0961251, -0.0575)
bones/8/rotation = Quaternion(-6.22192e-09, 4.31479e-09, -0.707107, 0.707107)
bones/8/scale = Vector3(1, 1, 1)
bones/9/position = Vector3(-0.176682, 0.111703, 0.0891542)
bones/9/rotation = Quaternion(-0.25577, 0.369756, 0.831269, 0.326885)
bones/9/scale = Vector3(0.999999, 0.999999, 1)
bones/10/rotation = Quaternion(1.99373e-08, 4.39796e-08, 0.551077, 0.834455)
bones/11/rotation = Quaternion(5.11843e-11, 3.07737e-10, -0.0266581, 0.999645)
bones/11/scale = Vector3(1, 1, 1)
bones/12/rotation = Quaternion(-0.257094, 0.204304, -0.0846693, 0.940741)
bones/13/position = Vector3(-5.13849e-10, 0.0961251, -0.0575)
bones/13/rotation = Quaternion(0.155711, -0.189455, 0.670289, 0.700409)
bones/13/scale = Vector3(1, 1, 1)
bones/15/rotation = Quaternion(0.0734006, 0.130489, 0.0124463, 0.988651)
bones/17/position = Vector3(0.170945, 0.113587, 1.39233e-08)
bones/17/rotation = Quaternion(0.991443, 0.0746742, 0.0406456, 0.0990605)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(0.414163, 6.23122e-08, -2.90957e-07, 0.910203)
bones/19/rotation = Quaternion(-0.625752, -0.210452, 0.0655361, 0.748231)
bones/19/scale = Vector3(1, 1, 0.999999)
bones/20/rotation = Quaternion(-4.03199e-06, 0.920115, -0.391649, 8.30535e-07)
bones/21/rotation = Quaternion(0.987927, -0.0401695, -0.0125457, 0.149097)
bones/21/scale = Vector3(1, 1, 1)
bones/22/rotation = Quaternion(0.447447, -5.98501e-08, 3.12064e-07, 0.894311)
bones/23/rotation = Quaternion(-0.63451, 0.110638, -0.0338268, 0.764207)
bones/23/scale = Vector3(1, 1, 0.999999)
bones/24/rotation = Quaternion(-3.56053e-10, 0.920121, -0.391634, 4.46935e-07)
bones/24/scale = Vector3(1, 0.999997, 1)
bones/25/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/26/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/27/position = Vector3(0.0308395, 0.382458, -2.86687e-15)
bones/27/rotation = Quaternion(1.00138e-08, 1.91522e-09, 0.984639, -0.174603)
bones/28/position = Vector3(3.75295e-09, 0.213436, -1.0343e-08)
bones/28/rotation = Quaternion(-9.99889e-08, 0.391084, 0.920355, -3.39507e-08)
bones/29/position = Vector3(2.3491e-08, 0.16565, -5.09136e-09)
bones/30/rotation = Quaternion(1, 2.30261e-09, 1.93335e-07, -4.39844e-16)
bones/32/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/33/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/34/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/35/position = Vector3(-1.11482e-08, 0.213436, -2.50942e-15)
bones/35/rotation = Quaternion(-1.05796e-07, 0.391084, 0.920355, -2.58643e-08)
bones/36/position = Vector3(-6.31128e-09, 0.16565, 2.70695e-09)
bones/37/rotation = Quaternion(1, 3.76526e-09, 1.94879e-07, 7.45058e-09)
bones/39/position = Vector3(0.839842, 0.719866, -0.447558)
bones/39/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/40/position = Vector3(0.341961, 0.806534, 0.40234)
bones/40/rotation = Quaternion(0.622543, 0.0705614, 0.445286, 0.639674)
bones/41/position = Vector3(-0.87741, 1.03555, -0.447559)
bones/41/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/42/position = Vector3(-0.35057, 0.820503, 0.284923)
bones/42/rotation = Quaternion(0.309168, -0.224483, -0.911755, 0.150749)

[node name="Nagonford_Axe" parent="skin/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.202211, 0.79169, 0.576486, 0.61361, 0.356359, -0.704621, -0.763277, 0.49622, -0.41373, -0.29863, 0.685006, 0.357367)

[node name="Nagonford_Axe" parent="skin/Rig/Skeleton3D/Nagonford_Axe" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.906308, -0.422618, 0, 0.422618, 0.906308, 0, 0, 0)

[node name="RayCast3D" type="RayCast3D" parent="skin/Rig/Skeleton3D/Nagonford_Axe/Nagonford_Axe" index="0"]
target_position = Vector3(0, 1.31, 0)
collision_mask = 2

[node name="Marker3D" type="Marker3D" parent="skin/Rig/Skeleton3D/Nagonford_Axe/Nagonford_Axe" index="1"]
transform = Transform3D(0.999635, -0.0266616, 0.00443459, 0.0263729, 0.998094, 0.0558008, -0.00591406, -0.0556637, 0.998432, -0.0116703, 1.2621, -0.00111717)

[node name="Nagonford_Cape" parent="skin/Rig/Skeleton3D" index="1"]
transform = Transform3D(0.965926, 0.0315801, -0.256885, -0.00999434, 0.996339, 0.0849045, 0.258626, -0.0794441, 0.962705, 0.0279199, 1.17485, -0.063524)

[node name="Nagonford_ArmLeft" parent="skin/Rig/Skeleton3D" index="2"]
material_overlay = ExtResource("4_fqfbq")

[node name="Nagonford_ArmRight" parent="skin/Rig/Skeleton3D" index="3"]
material_overlay = ExtResource("4_fqfbq")

[node name="Nagonford_Body" parent="skin/Rig/Skeleton3D" index="4"]
material_overlay = ExtResource("4_fqfbq")

[node name="Nagonford_Head" parent="skin/Rig/Skeleton3D" index="5"]
material_overlay = ExtResource("4_fqfbq")

[node name="Nagonford_LegLeft" parent="skin/Rig/Skeleton3D" index="6"]
material_overlay = ExtResource("4_fqfbq")

[node name="Nagonford_LegRight" parent="skin/Rig/Skeleton3D" index="7"]
material_overlay = ExtResource("4_fqfbq")

[node name="AnimationTree" parent="." index="2"]
root_node = NodePath("../skin")
tree_root = SubResource("AnimationNodeBlendTree_aeu4q")
anim_player = NodePath("../skin/AnimationPlayer")
parameters/AttackOneShot/active = false
parameters/AttackOneShot/internal_active = false
parameters/AttackOneShot/request = 0
parameters/SpinBlend/blend_amount = 0.0
parameters/TimeScale/scale = 0.5

[node name="Area3D" type="Area3D" parent="." index="4"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.29675, 0)
shape = SubResource("SphereShape3D_bxpkn")

[connection signal="timeout" from="Timers/Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]

[editable path="skin"]
